--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -21,6 +21,12 @@
             android:layout_height="wrap_content"
             android:text="@string/close"
             android:onClick="closeConnect"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="子线程写数据"
+            android:onClick="writeBackground"/>
     </LinearLayout>
 
 
